[gd_scene load_steps=7 format=3 uid="uid://budhy3vgcdxe4"]

[ext_resource type="Script" path="res://menu.gd" id="1_jpx6y"]

[sub_resource type="Curve" id="Curve_1lw0t"]
_data = [Vector2(0, 0.21978), 0.0, 0.0, 0, 0, Vector2(1, 0.538462), 0.214286, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_kyg8g"]
curve = SubResource("Curve_1lw0t")

[sub_resource type="Animation" id="Animation_r0dob"]
resource_name = "fadein"
length = 0.65
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.566667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.566667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.566667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.566667)
}

[sub_resource type="Animation" id="Animation_eb5xb"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvvr8"]
_data = {
"RESET": SubResource("Animation_eb5xb"),
"fadein": SubResource("Animation_r0dob")
}

[node name="Control" type="Control"]
z_index = 25
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jpx6y")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CurveTexture_kyg8g")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 19.0
offset_right = 394.0
offset_bottom = 143.0
theme_override_font_sizes/normal_font_size = 71
text = "Snapshot"

[node name="Credits" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -363.0
offset_top = -124.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 26
text = "Programming by Emery
Art by Smilestrawbunny
Music by Aensland"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 169.0
offset_right = 235.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="Settings" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 86.0
offset_top = 305.0
offset_right = 235.0
offset_bottom = 396.0
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 445.0
offset_right = 235.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="FadeIn" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
libraries = {
"": SubResource("AnimationLibrary_pvvr8")
}

[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
